--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -67,11 +67,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="Opiniometro_WebAppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Opiniometro_WebAppContext-20190429215901; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Opiniometro_WebAppContext-20190429215901.mdf"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
