--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -67,7 +67,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.Opiniometro_Model.csdl|res://*/Models.Opiniometro_Model.ssdl|res://*/Models.Opiniometro_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JOSE-ANDRES\SQLEXPRESS;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
