--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\EstudianteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TheStrategistsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -221,15 +222,16 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\TheStrategists\About.cshtml" />
+    <Content Include="Views\TheStrategists\Contact.cshtml" />
+    <Content Include="Views\TheStrategists\Index.cshtml" />
     <Content Include="Views\Estudiante\Create.cshtml" />
     <Content Include="Views\Estudiante\Delete.cshtml" />
     <Content Include="Views\Estudiante\Details.cshtml" />
     <Content Include="Views\Estudiante\Edit.cshtml" />
-    <Content Include="Views\Estudiante\Index.cshtml" />
-    <Content Include="Views\Estudiante\Perfil.cshtml" />
+    <Content Include="Views\TheStrategists\Estudiantes.cshtml" />
+    <Content Include="Views\TheStrategists\Perfil.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
