Layout basico para la página de la herramienta de asignación de formularios.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -250,6 +250,7 @@
     <Content Include="Models\OpiniometroModel.edmx.diagram">
       <DependentUpon>OpiniometroModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Views\AsignarFormularios.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
