Se agregó un navbar-brand y un navbar-default personalizados para evitar algún posible conflicto con otros equipos.  Se cambió el nombre de la vista parcial a BarraLogin.cshtml

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -299,7 +299,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Auth\Recuperar.cshtml" />
-    <Content Include="Views\Shared\Auth\BarraInicio.cshtml" />
+    <Content Include="Views\Shared\Auth\BarraLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
